--- a/main.html
+++ b/main.html
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<nav>
+	<ul>
+		<li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-">URL 1</a></li>
+		<li><a href=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></a>URL 2</li>
+		<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></a>URL 3</li>
+	</ul>
+		
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
