--- a/main.html
+++ b/main.html
@@ -7,13 +7,11 @@
 </head>
 
 <body>
+	<h1>3 random audios</h1>
 	<nav>
 	<ul>
-		<h1>Random Audio 1</h1>
 		<li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-">URL 1</a></li>
-		<h1>Random Audio 2</h1>
 		<li><a href=" http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></a>URL 2</li>
-		<h1>Random Audio 3</h1>
 		<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></a>URL 3</li>
 	</ul>
 		
